Supports mouse wheel #13 - On Linux